--- a/template.qmd
+++ b/template.qmd
@@ -2,16 +2,26 @@
 format: 
   naletter-pdf:
     fromname: Nelson Areal
+    fromaddress: |
+                 | School of Economics and Management
+                 | University of Minho
+                 | Campus de Gualtar
+                 | 4710-057 Braga - Portugal
     fromtitle: Associate Professor
     fromWWW: nelsonareal.net
     fromemail: nareal@eeg.uminho.pt
     fromphone: +351 253 601 923
     toname: Helen of Troy
     toaddress: University of Greece\newline Athens
-    opening: Dear Helen
+    opening: Dear Helen,
     closing: Best regards,
     spacing: 1.4
     sansfont: NewsGotT
+    lang: en-GB # pt-PT
+    babel-lang: british # portuguese
+    #date: Thursday, 18 October 2022
+    #logofilepath:  um-eeg
+    #keep-tex: true
 ---
 
 I am writing to ask you to \dots
