Fix a closing curly bracket

--- a/_extensions/naletter/template.tex
+++ b/_extensions/naletter/template.tex
@@ -291,8 +291,9 @@ $body$
   $closing$\\[0.5cm]
   $endif$
   $if(fromname)$
-    $fromname$}
-  $endif$
+    $fromname$
+    $endif$
+}
 \end{letter}
 
 
