Check file path

--- a/_extensions/naletter/template.tex
+++ b/_extensions/naletter/template.tex
@@ -188,7 +188,11 @@ $endif$
 $if(logofilepath)$
 \sbox{\letterlogo}{\hbox{\includegraphics[]{$logofilepath$}}}
 $else$
-\sbox{\letterlogo}{\hbox{\includegraphics[]{_extensions/nareal/naletter/um-eeg}}}
+\IfFileExists{_extensions/nareal/naletter/um-eeg}{
+  \sbox{\letterlogo}{\hbox{\includegraphics[]{_extensions/nareal/naletter/um-eeg}}}
+}{
+  \sbox{\letterlogo}{\hbox{\includegraphics[]{_extensions/naletter/um-eeg}}}
+}
 $endif$
 
 
