Changed the default font for one that is usually installed in most systems

--- a/template.qmd
+++ b/template.qmd
@@ -16,7 +16,7 @@ format:
     opening: Dear Helen,
     closing: Best regards,
     spacing: 1.4
-    sansfont: NewsGotT
+    sansfont: Helvetica #NewsGotT 
     lang: en-GB # pt-PT
     babel-lang: british # portuguese
     #date: Thursday, 18 October 2022
