Using the LaTeX package fontawesome5 instead of fontawesome5

--- a/_extensions/naletter/template.tex
+++ b/_extensions/naletter/template.tex
@@ -174,7 +174,7 @@ $if(dir)$
 \fi
 $endif$
 
-\usepackage{color,hyperref,url,fontawesome}
+\usepackage{color,hyperref,url,fontawesome5}
 \urlstyle{same}  % don't use monospace font for urls
 \usepackage[absolute,overlay]{textpos}
 \setlength{\TPHorizModule}{1cm}
